Closed
Bug 825924
Opened 13 years ago
Closed 13 years ago
Form autocomplete does not properly reset
Categories
(Core :: DOM: Editor, defect)
Tracking
()
VERIFIED
FIXED
mozilla21
People
(Reporter: ael, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
12.48 KB,
patch
|
smaug
:
review+
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:17.0) Gecko/20100101 Firefox/17.0
Build ID: 20121128204232
Steps to reproduce:
- Double click in a form field (type text mainly) to display the autocomplete history
- Select an item
- Select the field content, right-click and cut
- Double click again in the form field
Actual results:
- The autocomplete history only shows the last selected item
Expected results:
- The autocomplete history should display all the history
This only happens when the field content is deleted via mouse selection and cutting. When deleting with the keyboard the history is correctly shown.
Switching tab before double clicking in the field again also reset the history correctly.
Comment 1•13 years ago
|
||
Regression window(cached m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/c3cb87871829
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120325 Firefox/14.0a1 ID:20120326174026
Bad:
http://hg.mozilla.org/mozilla-central/rev/0ff816e5e992
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120327 Firefox/14.0a1 ID:20120327100541
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c3cb87871829&tochange=0ff816e5e992
Regression window(cached m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/90f3a9a6e197
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120326 Firefox/14.0a1 ID:20120326174729
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/3f9b7201c29d
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120326 Firefox/14.0a1 ID:20120326195131
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=90f3a9a6e197&tochange=3f9b7201c29d
Suspected: Bug 668606
Blocks: 668606
Status: UNCONFIRMED → NEW
Component: Untriaged → Editor
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Version: 17 Branch → 14 Branch
Updated•13 years ago
|
OS: Windows 8 → All
Comment 2•13 years ago
|
||
Masayuki, can you please take a look at this? Thanks!
Assignee: nobody → masayuki
| Assignee | ||
Comment 3•13 years ago
|
||
The cause is nsEditor fires untrusted input event if the edit is caused by command. Of course, it's a bug.
However, according to the document of D3E spec,
http://dev.w3.org/2006/webapi/DOM-Level-3-Events/html/DOM3-Events.html#trusted-events
Shouldn't we dispatch each input event as trusted event even if the change is caused by untrusted event? Even if the changed cause is untrusted event, the change actually happens and the input event is the notification. So, I think that nsEditor should always dispatch trusted input events. How do you think, Smaug?
Status: NEW → ASSIGNED
Flags: needinfo?(bugs)
Comment 4•13 years ago
|
||
Yeah, I think if there is some "input" to editor, the event needs to be trusted.
Flags: needinfo?(bugs)
| Assignee | ||
Comment 5•13 years ago
|
||
Thank you. I'll write such patch.
| Assignee | ||
Comment 6•13 years ago
|
||
This patch make nsEditor always dispatch trusted input events. Then, autocomplete handler always handle properly.
Attachment #700963 -
Flags: review?(ehsan)
Attachment #700963 -
Flags: review?(bugs)
| Assignee | ||
Comment 7•13 years ago
|
||
Updated•13 years ago
|
Attachment #700963 -
Flags: review?(bugs) → review+
Comment 8•13 years ago
|
||
Comment on attachment 700963 [details] [diff] [review]
Patch
Review of attachment 700963 [details] [diff] [review]:
-----------------------------------------------------------------
Hmm OK. Make sure that this doesn't break any tests though, IIRC we had tests which did expect non-trusted input events at some point.
Attachment #700963 -
Flags: review?(ehsan) → review+
| Assignee | ||
Comment 9•13 years ago
|
||
> Hmm OK. Make sure that this doesn't break any tests though, IIRC we had
> tests which did expect non-trusted input events at some point.
Yep, on tryserver, all green. Fortunately, we don't accept untrusted key events now. So, I guess that there is no case we dispatch untrusted input event except unintentionally such as this bug.
Comment 10•13 years ago
|
||
(In reply to comment #9)
> > Hmm OK. Make sure that this doesn't break any tests though, IIRC we had
> > tests which did expect non-trusted input events at some point.
>
> Yep, on tryserver, all green. Fortunately, we don't accept untrusted key events
> now. So, I guess that there is no case we dispatch untrusted input event except
> unintentionally such as this bug.
Hmm, weird. But if the try server is happy, then who am I to disagree? :-)
| Assignee | ||
Comment 11•13 years ago
|
||
(In reply to :Ehsan Akhgari from comment #10)
> (In reply to comment #9)
> > > Hmm OK. Make sure that this doesn't break any tests though, IIRC we had
> > > tests which did expect non-trusted input events at some point.
> >
> > Yep, on tryserver, all green. Fortunately, we don't accept untrusted key events
> > now. So, I guess that there is no case we dispatch untrusted input event except
> > unintentionally such as this bug.
>
> Hmm, weird. But if the try server is happy, then who am I to disagree? :-)
I guess that this is what you worry about. The change refuses any change by untrusted key events, therefore, basically, untrusted input events shouldn't be fired from editor.
https://bugzilla.mozilla.org/show_bug.cgi?id=698949
| Assignee | ||
Comment 12•13 years ago
|
||
Comment 13•13 years ago
|
||
(In reply to comment #11)
> (In reply to :Ehsan Akhgari from comment #10)
> > (In reply to comment #9)
> > > > Hmm OK. Make sure that this doesn't break any tests though, IIRC we had
> > > > tests which did expect non-trusted input events at some point.
> > >
> > > Yep, on tryserver, all green. Fortunately, we don't accept untrusted key events
> > > now. So, I guess that there is no case we dispatch untrusted input event except
> > > unintentionally such as this bug.
> >
> > Hmm, weird. But if the try server is happy, then who am I to disagree? :-)
>
> I guess that this is what you worry about. The change refuses any change by
> untrusted key events, therefore, basically, untrusted input events shouldn't be
> fired from editor.
> https://bugzilla.mozilla.org/show_bug.cgi?id=698949
Yes, nice find! Thanks!
Comment 14•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
| Reporter | ||
Comment 15•13 years ago
|
||
The latest nightly works as expected for the few test cases where I noticed this problem. Thanks a lot for the quick fix.
| Assignee | ||
Comment 16•13 years ago
|
||
(In reply to ael from comment #15)
> The latest nightly works as expected for the few test cases where I noticed
> this problem. Thanks a lot for the quick fix.
Thank you for your verification.
-> v.
Status: RESOLVED → VERIFIED
Target Milestone: mozilla21 → ---
| Assignee | ||
Updated•13 years ago
|
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•