Bug 825924 Input events which are dispatched by editor should be trusted always r=smaug+ehsan