editor/libeditor/base/nsEditorEventListener.cpp
@@ -431,9 +431,6 @@ nsEditorEventListener::KeyPress(nsIDOMEvent* aKeyEvent)
     return NS_OK;
   }
 
-  // Transfer the event's trusted-ness to our editor
-  nsEditor::HandlingTrustedAction operation(mEditor, aKeyEvent);
-
   // DOM event handling happens in two passes, the client pass and the system
   // pass.  We do all of our processing in the system pass, to allow client
   // handlers the opportunity to cancel events and prevent typing in the editor.
@@ -584,9 +581,6 @@ nsEditorEventListener::HandleText(nsIDOMEvent* aTextEvent)
   if (mEditor->IsReadonly() || mEditor->IsDisabled()) {
     return NS_OK;
   }
-
-  // Transfer the event's trusted-ness to our editor
-  nsEditor::HandlingTrustedAction operation(mEditor, aTextEvent);
 
   return mEditor->UpdateIMEComposition(composedText, textRangeList);
 }
@@ -825,9 +819,6 @@ nsEditorEventListener::HandleEndComposition(nsIDOMEvent* aCompositionEvent)
   if (!mEditor->IsAcceptableInputEvent(aCompositionEvent)) {
     return;
   }
-
-  // Transfer the event's trusted-ness to our editor
-  nsEditor::HandlingTrustedAction operation(mEditor, aCompositionEvent);
 
   mEditor->EndIMEComposition();
 }
